# BinocularVis

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/commands/: opencommand.cpp  opencommand.h
src/pipeline/: function.h  value.h
src/pipeline/primitive/: align.cpp  align.h  clamp.cpp  clamp.h  constant.cpp  constant.h  difference.cpp  difference.h  loadcsv.cpp  loadcsv.h  norm.cpp  norm.h  scale.cpp  scale.h  variant.h  vector.h
src/pipeline/timeseries/: annotatedvideo.cpp  annotatedvideo.h  displayactivityscarf.cpp  displayactivityscarf.h  displayruler.cpp  displayruler.h  displayscarf.cpp  displayscarf.h  displaystc.cpp  displaystc.h  displaysts.cpp  displaysts.h  loadvideo.cpp  loadvideo.h  video.cpp  video.h
src/qdarkstyle/: style.qss
src/timeline/: labelitem.cpp  labelitem.h  ruleritem.cpp  ruleritem.h  scarfitem.cpp  scarfitem.h  stcitem.basic.frag  stcitem.basic.vert  stcitem.cpp  stcitem.h  stcitem.skin.frag  stcitem.skin.vert  stcitem.volume.frag  stcitem.volume.geom  stcitem.volume.vert  stsitem.cpp  stsitem.h  timeline.qrc  timelineitem.cpp  timelineitem.h  timelinescene.cpp  timelinescene.h  timelineview.cpp  timelineview.h
src/utils/: levenshtein.h
